fix: Enable coverage collection and add debugging for Codecov (PHASE 3.1 fix)

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -37,17 +37,37 @@ jobs:
 
       - name: 🧪 Run unit tests
         id: test
+        env:
+          CI: true
+          GITHUB_ACTIONS: true
         run: |
-          npm run test -- \
-            --coverage \
-            --collectCoverageFrom='src/**/*.js' \
-            --collectCoverageFrom='!src/**/*.test.js' \
-            --json \
-            --outputFile=test-results-node20.json \
-            2>&1 | tee test-output-node20.txt
+          npm run test -- --coverage 2>&1 | tee test-output-node20.txt
           
           TEST_EXIT_CODE=$?
           echo "exit_code=${TEST_EXIT_CODE}" >> $GITHUB_OUTPUT
+          
+          # Extract test counts
+          PASS_COUNT=$(grep -oP '\d+(?= passed)' test-output-node20.txt | head -1 || echo "0")
+          FAIL_COUNT=$(grep -oP '\d+(?= failed)' test-output-node20.txt | head -1 || echo "0")
+          echo "passed=${PASS_COUNT}" >> $GITHUB_OUTPUT
+          echo "failed=${FAIL_COUNT}" >> $GITHUB_OUTPUT
+          
+          exit 0
+
+      - name: 🔍 Debug coverage files
+        if: always()
+        run: |
+          echo "=== Coverage Directory Contents ==="
+          ls -la coverage/ 2>/dev/null || echo "❌ No coverage directory found"
+          
+          echo ""
+          echo "=== Checking for coverage-final.json ==="
+          if [ -f coverage/coverage-final.json ]; then
+            echo "✅ coverage-final.json found"
+            echo "File size: $(wc -c < coverage/coverage-final.json) bytes"
+          else
+            echo "❌ coverage-final.json NOT found"
+          fi
           
           # Extract test counts
           PASS_COUNT=$(grep -oP '\d+(?= passed)' test-output-node20.txt | head -1 || echo "0")
@@ -90,14 +110,11 @@ jobs:
 
       - name: 🧪 Run unit tests
         id: test
+        env:
+          CI: true
+          GITHUB_ACTIONS: true
         run: |
-          npm run test -- \
-            --coverage \
-            --collectCoverageFrom='src/**/*.js' \
-            --collectCoverageFrom='!src/**/*.test.js' \
-            --json \
-            --outputFile=test-results-node22.json \
-            2>&1 | tee test-output-node22.txt
+          npm run test -- --coverage 2>&1 | tee test-output-node22.txt
           
           TEST_EXIT_CODE=$?
           echo "exit_code=${TEST_EXIT_CODE}" >> $GITHUB_OUTPUT
@@ -108,6 +125,22 @@ jobs:
           echo "passed=${PASS_COUNT}" >> $GITHUB_OUTPUT
           echo "failed=${FAIL_COUNT}" >> $GITHUB_OUTPUT
           
+          exit 0
+
+      - name: 🔍 Debug coverage files
+        if: always()
+        run: |
+          echo "=== Coverage Directory Contents ==="
+          ls -la coverage/ 2>/dev/null || echo "❌ No coverage directory found"
+          
+          echo ""
+          echo "=== Checking for coverage-final.json ==="
+          if [ -f coverage/coverage-final.json ]; then
+            echo "✅ coverage-final.json found"
+            echo "File size: $(wc -c < coverage/coverage-final.json) bytes"
+          else
+            echo "❌ coverage-final.json NOT found"
+          fi
           exit 0
 
       - name: 📊 Upload coverage
