fix: Fix coverage threshold parsing with jq for proper JSON handling

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -178,10 +178,16 @@ jobs:
         run: |
           npm run test -- --coverage --silent > /dev/null 2>&1 || true
           
-          # Parse coverage thresholds
-          LINES=$(grep -oP 'Lines\s+:\s+\K[\d.]+' coverage/coverage-summary.json || echo "0")
-          FUNCTIONS=$(grep -oP 'Functions\s+:\s+\K[\d.]+' coverage/coverage-summary.json || echo "0")
-          BRANCHES=$(grep -oP 'Branches\s+:\s+\K[\d.]+' coverage/coverage-summary.json || echo "0")
+          # Check if coverage file exists
+          if [ ! -f coverage/coverage-summary.json ]; then
+            echo "❌ No coverage-summary.json found"
+            exit 1
+          fi
+          
+          # Parse coverage from JSON properly using jq
+          LINES=$(jq -r '.total.lines.pct' coverage/coverage-summary.json)
+          FUNCTIONS=$(jq -r '.total.functions.pct' coverage/coverage-summary.json)
+          BRANCHES=$(jq -r '.total.branches.pct' coverage/coverage-summary.json)
           
           echo "📊 Coverage Summary (Shared Utilities):"
           echo "   Lines:     ${LINES}% (target: 90%+)"
