--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,18 @@
-# Environment variables
-.env
-.env.local
-.env.*.local
-.env.production
-
 # Dependencies
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+.env.production
+
 # Test coverage
 coverage/
+.nyc_output/
 *.lcov
 
 # IDE and editor files
@@ -20,7 +21,10 @@ coverage/
 *.swp
 *.swo
 *~
+
+# OS-specific files
 .DS_Store
+Thumbs.db
 
 # Build outputs
 dist/
@@ -35,9 +39,6 @@ logs/
 tmp/
 temp/
 *.tmp
-
-# OS-specific files
-Thumbs.db
 
 # npm
 .npmrc
