fix: Remove output redirection to allow coverage file generation

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -176,7 +176,7 @@ jobs:
 
       - name: 📊 Verify coverage thresholds (Higher Standard)
         run: |
-          npm run test -- --coverage --silent > /dev/null 2>&1 || true
+          npm run test -- --coverage
           
           # Check if coverage file exists
           if [ ! -f coverage/coverage-summary.json ]; then
