feat: Switch to npm packages with semantic versioning
- Update package names to @verabot/* scoped packages
- Remove file: dependencies, use npm versions instead
- Add semantic-release workflows for auto-versioning
- Add .releaserc.json for release configuration
- Simplify testing workflows (no more path resolution hacks)
- Remove moduleNameMapper from jest.config.js
- Enables public npm package publishing with each commit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "verabot-utils",
+  "name": "@verabot/utils",
   "version": "1.0.0",
   "description": "Shared utilities and services library for Verabot - Database, logging, validation, and common helpers",
   "main": "src/index.js",
