--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-security": "^1.7.1",
     "jest": "^29.7.0",
     "prettier": "^3.0.3"
   },
